# CAP_S0017D

./: CopyrightInfo.txt  Lab1.cc  Nacken.txt  README.md  ShellScript.sh  Test  hello.sh  tmp
BinaryFiles/: CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Lab1/: CMakeLists.txt
Lab1/code/: App  CopyRightHolder.txt  LinuxApp.cc
Mac Spel/DeDebugger/DeDebugger/: AppDelegate.swift  GameScene.swift  GameViewController.swift  MainMenu.sks  Stroke.swift
Mac Spel/DeDebugger/DeDebugger.xcodeproj/: project.pbxproj
Mac Spel/DeDebugger/DeDebugger.xcodeproj/project.xcworkspace/: contents.xcworkspacedata.xml
Mac Spel/DeDebugger/DeDebugger/Assets.xcassets/BUTTERFLYTWO.imageset/: Contents.json
Mac Spel/DeDebugger/DeDebugger/Assets.xcassets/RAINBOWFLY.imageset/: Contents.json
Mac Spel/DeDebugger/DeDebugger/Base.lproj/: Main.storyboard.xml
NackensGrafik/code/: Matrix3D.h  MeshResource.cc  ShaderObject.cc  Vector3D.h  exampleapp.cc  exampleapp.h
Optimization/lab-env-master/: Chap11_DefocusBlur.ppm
Optimization/lab-env-master/engine/core/: app.h
Optimization/lab-env-master/engine/render/: window.h
Optimization/lab-env-master/projects/example/: code.hitable.h
Optimization/lab-env-master/projects/example/code/: .ppm  Nacken.ppm  Neck.ppm  Ojoj.ppm  Ouho.ppm  Paaa.ppm  ProgressTest.ppm  ShowMeBalls.ppm  Texas.ppm  camera.h  exampleapp.cc  exampleapp.h  hitableList.h  (+5 more)
Pacman/: PacMan.ino
PathTracing/lab-env-master/: CMakeLists.txt  TestLinux.ppm
PathTracing/lab-env-master/exts/: CMakeLists.txt
(+7 files in other folders)
